--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card class="ht-w-30 ht-center ht-mtop-5">
     <mat-card-title class="ht-text-center">Habit Tracker</mat-card-title>
     <mat-card-content>
-        <form [formGroup]="loginForm" (submit)="login()" class="ht-flex ht-flex-col ht-gap-1">
+        <form [formGroup]="loginForm" (submit)="login()" class="ht-flex ht-flex-col">
             <mat-form-field appearance="standard" class="ht-w-100">
                 <mat-label>Email</mat-label>
                 <input matInput type="email" formControlName="email">
