--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.success { background-color: #009440; color: #ffffff; }
+.error { background-color: #ff0000; color: #ffffff; }
+.warning { background-color: #eead2d; color: #ffffff; }
+
 .ht-center { margin: 0 auto; }
 
 .ht-text-left   { text-align: left !important; }
