--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -17,7 +17,7 @@
             </mat-form-field>
             <div class="ht-flex ht-flex-row-rev ht-gap-1">
                 <button mat-raised-button color="primary" type="submit">Login</button>
-                <button mat-button type="button">Cadastre-se</button>
+                <button mat-button type="button" [routerLink]="['/user-registration']">Cadastre-se</button>
             </div>
         </form>
     </mat-card-content>
